# sprite-editor

./: CMakeLists.txt  README.md  assets.yml  main.cpp  main.hpp  metadata.yml
src/: control-icons.cpp  control-icons.hpp  dialog.hpp  editor.cpp  editor.hpp  file-browser.cpp  file-browser.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  palette.cpp  palette.hpp  preview.cpp  preview.hpp
